--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,4 +1,4 @@
-:root {
+/* :root {
   --max-width: 1100px;
   --border-radius: 12px;
   --font-mono: ui-monospace, Menlo, Monaco, 'Cascadia Mono', 'Segoe UI Mono',
@@ -73,11 +73,7 @@
   }
 }
 
-* {
-  box-sizing: border-box;
-  padding: 0;
-  margin: 0;
-}
+
 
 html,
 body {
@@ -101,7 +97,12 @@ a {
 }
 
 @media (prefers-color-scheme: dark) {
-  html {
+  html {c
     color-scheme: dark;
   }
+} */
+* {
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0;
 }
