--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -1,107 +1,4 @@
-/* styles/contact.module.css */
-.contactPage {
-    max-width: 400px;
-    margin: 0 auto;
-    padding: 20px;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+
+  .shopcontainer{
+    background-image: url("https://plus.unsplash.com/premium_photo-1661381021048-5498177b2c3d?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=387&q=80");
   }
-  
-  .contactPage h1 {
-    font-size: 24px;
-    margin-bottom: 20px;
-  }
-  
-  .contactPage form label {
-    display: block;
-    margin-bottom: 8px;
-  }
-  
-  .contactPage form input,
-  .contactPage form textarea {
-    width: 100%;
-    padding: 10px;
-    margin-bottom: 15px;
-    border: 1px solid #ccc;
-    border-radius: 3px;
-  }
-  
-  .contactPage form textarea {
-    resize: vertical;
-    min-height: 100px;
-  }
-  
-  .contactPage form button {
-    background-color: #007bff;
-    color: #fff;
-    padding: 10px 15px;
-    border: none;
-    border-radius: 3px;
-    cursor: pointer;
-  }
-  
-  .contactPage form button:hover {
-    background-color: #0056b3;
-  }
-/* / hello this ish another code of get customer */
-.container {
-    max-width: 600px;
-    margin: 0 auto;
-    padding: 20px;
-  }
-  
-  .title {
-    font-size: 24px;
-    margin-bottom: 10px;
-  }
-  
-  .inputContainer {
-    display: flex;
-    margin-bottom: 20px;
-  }
-  
-  .inputField {
-    flex: 1;
-    padding: 8px;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-  }
-  
-  .button {
-    padding: 8px 16px;
-    background-color: #007bff;
-    color: #fff;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-  }
-  
-  .button:hover {
-    background-color: #0056b3;
-  }
-  
-  .customerList {
-    margin-top: 20px;
-  }
-  
-  .customerItem {
-    display: flex;
-    align-items: center;
-    padding: 10px;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-    margin-bottom: 10px;
-    cursor: pointer;
-  }
-  
-  .customerItem:hover {
-    background-color: #f0f0f0;
-  }
-  
-  .customerLink {
-    margin-left: 10px;
-    color: #007bff;
-    text-decoration: none;
-  }
-  
